# llm_test_project

./: LICENSE  NC_llm_judge_testcase.xlsx  NC_llm_judge_testcase_extracted.csv  README.md  config.yaml  pyproject.toml  requirements.txt  test_excel_loader.py  test_prompt_manager.py
agents/: excel_loader.py  prompt_manager.py
prompts/: evaluation_criteria.yaml  nc_judge.yaml
